--- a/src/main/resources/templates/buildings/form.html
+++ b/src/main/resources/templates/buildings/form.html
@@ -55,7 +55,10 @@
             <div class="alert alert-danger" th:text="${error}"></div>
         </div>
         <div class="footer">
-            <a th:href="'/reports/building/'+*{id}" th:text="#{view.report}" class="btn btn-primary"></a>
+            <a th:unless="${buildingVO.id==0}" th:href="'/service-contracts?buildingId='+*{id}"
+               th:text="#{service.contracts}" class="btn btn-primary"></a>
+            <a th:unless="${buildingVO.id==0}" th:href="'/reports/building/'+*{id}" th:text="#{view.report}"
+               class="btn btn-primary"></a>
             <button type="submit" class="pull-right btn btn-success" th:text="#{save}">Save</button>
         </div>
     </div>
