--- a/src/main/resources/templates/owners/list.html
+++ b/src/main/resources/templates/owners/list.html
@@ -22,8 +22,8 @@
     </tr>
     </thead>
     <!--/*@thymesVar id="person" type="com.proskurnia.VOs.PersonVO"*/-->
-    <tbody th:each="person : ${owners}">
-    <tr>
+    <tbody>
+    <tr th:each="person : ${owners}">
         <td th:text="${person.passport}"></td>
         <td><a th:href="${'/owners/' + person.id}" th:text="${person.name}"></a></td>
         <td th:text="${person.caf}"></td>
