--- a/src/main/resources/templates/renting-contracts/list.html
+++ b/src/main/resources/templates/renting-contracts/list.html
@@ -22,8 +22,8 @@
     </tr>
     </thead>
     <!--/*@thymesVar id="object" type="com.proskurnia.VOs.RentingContractVO"*/-->
-    <tbody th:each="object : ${list}">
-    <tr>
+    <tbody>
+    <tr th:each="object : ${list}">
         <td><a th:href="/service-companies/+${object.serviceCompanyId}" th:text="${object.companyName}"></td>
         <td><a th:href="${'/owners/' + object.buildingId}" th:text="${object.buildingAddress}"></a></td>
         <td th:text="${new java.util.Date(object.startDate)}"></td>
