--- a/src/main/resources/templates/settings/all.html
+++ b/src/main/resources/templates/settings/all.html
@@ -58,6 +58,9 @@
         <button class="btn btn-primary js-new" th:text="#{add.new}"></button>
     </div>
 </div>
+<footer>
+    <a href="/settings/payments" th:text="#{all.payments}" class="btn btn-primary"/>
+</footer>
 </body>
 <th:block th:replace="template :: js"></th:block>
 <script src="/resources/js/settings.js" th:src="@{/js/settings.js}"></script>
